# hogg

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.cargo/: config.toml
.hogg/: config.toml
.hogg_example/: config.toml  nuclei-config.yaml
.hogg_example/sniffers/: dnsproxy.toml
hogg-cli/: Cargo.toml
hogg-cli/src/: main.rs
hogg-cli/src/cmds/: detections.rs  mod.rs  ping.rs
hogg-common/: Cargo.toml
hogg-common/src/: config.rs  db.rs  dnslib.rs  env.rs  lib.rs  ssladapter.rs
hogg-config/: config.toml  nuclei-config.yaml
hogg-daemon/: Cargo.toml
hogg-daemon/src/: dnsproxy.rs  lib.rs  main.rs  notifications.rs  nuclei.rs
hogg-grpc/: Cargo.toml  build.rs
hogg-grpc/proto/: daemon.proto
hogg-grpc/src/grpc/: mod.rs
hogg-grpc/src/grpc/services/: daemon.rs  daemon_health.rs  mod.rs
resources/config-template/: hogg.toml
src/: config.rs  env.rs  main.rs  server.rs
src/hijackers/: dnsproxy.rs  mod.rs
src/notifiers/: mod.rs
src/optimizers/: mod.rs  ssladapter.rs
src/scanner/: mod.rs
src/scanner/scanners/: gitcreds.rs  gitdirectory.rs  mod.rs
src/sniffer/: dnsproxy.rs
src/sniffers/: dnsproxy.rs  mod.rs
