[package]
name = "hogg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hogg-grpc = { path = "../hogg-grpc" }
hogg-common = { path = "../hogg-common" }
hogg-daemon = { path = "../hogg-daemon" }

anyhow = "1.0.68"
async-trait = "0.1.60"
clap = { version = "4.0.32", features = ["derive", "cargo"] }
logs = "0.7.1"
tokio = "1.23.0"
