[package]
name = "hogg-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
directories = "4.0.1"
err-derive = "0.3.1"
include_dir = { version = "0.7.3", features = ["glob"] }
logs = "0.7.1"
reqwest = "0.11.13"
serde = { version = "1.0.151", features = ["derive"] }
serde_derive = "1.0.151"
serde_json = "1.0.91"
toml = "0.5.10"
