[package]
name = "hogg-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hogg-common = { path = "../hogg-common" }

anyhow = "1.0.68"
include_dir = { version = "0.7.3", features = ["glob"] }
logs = "0.7.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_derive = "1.0.151"
async-trait = "0.1.60"

tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync", "process"] }
serde_json = "1.0.91"
